Fotoseite ein bisschen überarbeitet.

--- a/Fotostartseiteneu.html
+++ b/Fotostartseiteneu.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
   <meta content="de" http-equiv="Content-Language">
   <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
   <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
-  body {background-color:#99cc33;}
-
-  td {vertical-align:center; overflow:hidden; }
+  body {
+    background-color:#99cc33;
+  }
+  td {
+    vertical-align: center;
+    overflow: hidden;
+  }
   </style>
   <title>Christophs Pflanzenparadies - Fotos</title>
 </head>
 <body background="images/Background.jpg">
-  <div align="center" id="uebersicht">
+  <div class="backlink">
     <p><a href="index.html">zurück zur Startseite</a></p>
-    <table>
-      <tbody>
-        <tr>
-          <td class="center" bgcolor="#007700">
-            <p>Hier geht es zu den Fotos! Der
-            Übersichtlichkeit halber gibt es mehrere Kategorien:</p>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <p></p>
+  </div>
+  <div class="title">
+    <p>Fotos</p>
+  </div>
+  <div class="text">
+    <p>Hier geht es zu den Fotos! Der Übersichtlichkeit halber gibt es mehrere Kategorien:</p>
+  </div>
+  <p></p>
     <table>
       <tbody>
         <tr>
@@ -127,6 +129,5 @@
       </tbody>
     </table>
     <p><a href="index.html">zurück zur Startseite</a></p>
-  </div>
 </body>
 </html>
