--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <title>Der Steingärtner</title>
 </head>
 <body>
+  <div class="title">
+    <p>Der Steingärtner</p>
+  </div>
   <table><tbody>
-    <tr>
-      <td class="title" style="" colspan="2">Der Steingärtner</td>
-    </tr>
     <tr>
       <td class="green1" colspan="2">
         <p>Willkommen auf meiner Homepage!</p>
@@ -39,19 +39,16 @@
       </td>
       <td class="green6 center kachel">
         <a class="big" href="Fotostartseiteneu.html">Fotos</a>
-        <p>Hier geht&#8217;s zu Fotos meines Gartens &#8211; vor allem
-        gibt es Fotos von Steingartenpflanzen zu sehen.</p>
+        <p>Hier geht&#8217;s zu Fotos meines Gartens &#8211; vor allem gibt es Fotos von Steingartenpflanzen zu sehen.</p>
       </td>
     </tr>
     <tr>
       <td class="green3 center kachel">
-        <a class="big" href="Kontaktneu.html">Kontakt,
-        Impressum, Datenschutz</a>
+        <a class="big" href="Kontaktneu.html">Kontakt, Impressum, Datenschutz</a>
       </td>
       <td class="green4 center kachel">
         <a class="big" href="preisliste.html">Bestellung</a>
-        <p>Brauchen Sie noch Steingartenpflanzen für Ihren eigenen Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum
-        Bestellformular</p>
+        <p>Brauchen Sie noch Steingartenpflanzen für Ihren eigenen Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum Bestellformular</p>
       </td>
     </tr>
     <tr>
