--- a/Fotostartseiteneu.html
+++ b/Fotostartseiteneu.html
@@ -7,17 +7,13 @@
   <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
-  body {
-    background-color:#99cc33;
-  }
-  td {
-    vertical-align: center;
-    overflow: hidden;
-  }
+    body {
+      background-image: url("images/Background.jpg");
+    }
   </style>
   <title>Christophs Pflanzenparadies - Fotos</title>
 </head>
-<body background="images/Background.jpg">
+<body>
   <div class="backlink">
     <p><a href="index.html">zurück zur Startseite</a></p>
   </div>
@@ -27,7 +23,6 @@
   <div class="text">
     <p>Hier geht es zu den Fotos! Der Übersichtlichkeit halber gibt es mehrere Kategorien:</p>
   </div>
-  <p></p>
     <table>
       <tbody>
         <tr>
@@ -128,6 +123,8 @@
         </tr>
       </tbody>
     </table>
+  <div class="backlink">
     <p><a href="index.html">zurück zur Startseite</a></p>
+  </div>
 </body>
 </html>
