--- a/Kontaktneu.html
+++ b/Kontaktneu.html
@@ -1,52 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
   <meta content="de" http-equiv="Content-Language">
   <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
   <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
+  body {
+    background-image: url("images/Cyclamen-hederifolium.JPG");
+  }
   </style>
   <title>Kontakt</title>
 </head>
 <body bgcolor="#99CC33">
-  <div align="center" id="uebersicht">
-    <table>
-      <tbody>
-        <tr>
-          <td bgcolor="#007700" width="100%">
-            <p align="center"><font face="Arial" size="3"><b>Dr. Christoph Rohlfs</b></font></p>
-            <p align="center"><font face="Arial" size="3"><b>Bitzerweg 6</b></font></p>
-            <p align="center"><font face="Arial" size="3"><b>53229 Bonn</b></font></p>
-            <p align="center"><font face="Arial" size="3"><b>Tel.: (0228) 48 19 13
-            (abends)</b></font></p>
-            <p align="center"><font face="Arial" size="3"><b>e-mail:
-            rohlfs.bonn(@)freenet.de</b></font></p>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <p></p>
-    <p></p>
-    <p></p>
-    <table>
-      <tbody>
-        <tr>
-          <td bgcolor="#004700" width="100%">
-            <p align="center"><font face="Arial" size="5"><b>Datenschutz</b></font></p>
-          </td>
-        </tr>
-        <tr>
-          <td bgcolor="#007700" width="100%">
-            <p align="center"><font face="Arial" size="3"><b>Bei Kontaktaufnahme über E-Mail werden
+  <div class="title">
+    <p>Kontakt</p>
+  </div>
+  <div class="center text green2">
+    <p>     
+      Dr. Christoph Rohlfs<br>
+      Bitzerweg 6<br>
+      53229 Bonn<br>
+      Tel.: (0228) 48 19 13 (abends)<br>
+      e-mail: rohlfs.bonn(@)freenet.de<br>
+    </p>
+  </div>
+  <div class="text">
+    <h3>Datenschutz</h3>
+    <p> Bei Kontaktaufnahme über E-Mail werden
             nur die von Ihnen angegebenen Daten vorübergehend gespeichert und nach spätestens 3
             Monaten gelöscht. Sie werden nur zur Abwicklung der Bestellung oder Anfrage verwendet.
             Eine Weitergabe an Dritte ist ausgeschlossen. Cookies werden nicht
-            gesetzt.</b></font></p>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+            gesetzt.
+    </p>
+  </div>
+  <div class="backlink">
     <p><a href="index.html">zurück zur Startseite</a></p>
   </div>
 </body>
