Preisliste, Links und Kontakt überarbeitet.

--- a/Kontaktneu.html
+++ b/Kontaktneu.html
@@ -13,7 +13,7 @@
   </style>
   <title>Kontakt</title>
 </head>
-<body bgcolor="#99CC33">
+<body>
   <div class="title">
     <p>Kontakt</p>
   </div>
