--- a/linksammlung.html
+++ b/linksammlung.html
@@ -1,18 +1,21 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-    <style media="all" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+  <style media="all" type="text/css">
+  body {
+    background-image: url("images/Cyclamen-hederifolium.JPG");
+  }
 	</style>
 <title>Die Linksammlung</title>
-
-
 </head>
-
-<body bgcolor=#008800>
-<spacer type=horizontal size=800><a href="index.html">zurück zur Startseite</a>
-<h1>Hier gibt es Links zu allen möglichen Themen rund um den Garten</h1>
-<br>
-<br>
+<body>
+  <div class="backlink">
+    <p><a href="index.html">zurück zur Startseite</a></p>
+  </div>
+  <div class="text">
+<h3>Hier gibt es Links zu allen möglichen Themen rund um den Garten</h3>
 <p><a href="http://www.gds-staudenfreunde.de/">www.gds-staudenfreunde.de</a>&nbsp;&nbsp;Gesellschaft der Staudenfreunde</p>
 <p><a href="http://www.semperhorst.de/">www.semperhorst.de</a>&nbsp;&nbsp;Pflanzenliebhaber; alles über Sempervivum</p>
 <p><a href="http://www.gartentechnik.de/">www.gartentechnik.de</a>&nbsp;&nbsp;Linksammlung, Branchenbuch, Organisationen usw.</p>
@@ -27,8 +30,9 @@
 <p><a href="http://www.botanikus.de/">www.botanikus.de</a>&nbsp;&nbsp;Datenbank, Giftpflanzen, Heilpflanzen, Literatur</p> 
 <p><a href="http://www.gartenlinksammlung.de/lpers.htm">www.gartenlinksammlung.de/lpers.htm</a>&nbsp;&nbsp;Linksammlung, Berühmtheiten aus der Gartenwelt</p>
 <p><a href="http://www.baumpfingstrosen.de/">www.baumpfingstrosen.de</a>&nbsp;&nbsp;alles über Baumpaeonien</p> 
-<br>
-<br>
-<p> Bitte haben Sie Verständnis dafür, dass ich für den Inhalt der verlinkten Seiten nicht haften kann. </p>
+  </div>
+  <div class="text green2">
+    <p>Bitte haben Sie Verständnis dafür, dass ich für den Inhalt der verlinkten Seiten nicht haften kann.</p>
+  </div>
 </body>
 </html>
