Alle Fotoseiten neu grundstrukturiert.

--- a/Sommer.html
+++ b/Sommer.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
   <meta content="de" http-equiv="Content-Language">
   <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
   <meta content="Christophs Pflanzenparadies" lang="de" name="description">
@@ -9,37 +10,17 @@
     body {
       background-image: url("images/Helianth-DianaxAfflik-bg.jpg");
     }
-    table {
-      width:70%;
-      border-style:none;
-    }
-    td {
-      vertical-align:center;
-      overflow:hidden;
-    }
   </style>
   <title>Sonstige Fotos</title>
 </head>
 <body>
-  <div align="center" id="sonstnoch">
-    <table>
-      <tbody>
-        <tr>
-          <td align="center" bgcolor="#007700" height="80" width="660"><font face=
-          "Arial"><font size="6">Der Steingarten im Sommer und Herbst</font></font></td>
-        </tr>
-      </tbody>
-    </table>
-    <p></p>
-    <table>
-      <tbody>
-        <tr>
-          <td bgcolor="#44AA00" height="30" width="500">
-            <p align="center"></p>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="backlink">
+    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a></p>
+  </div>
+  <div class="title">
+    <p>Der Steingarten im Sommer und Herbst</p>
+  </div>
     <table>
       <tbody>
         <tr>
@@ -521,8 +502,10 @@
           </td>
         </tr>
       </tbody>
-    </table><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück
-    zur Fotoübersicht</a>
+    </table>
+  <div class="backlink">
+    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a></p>
   </div>
 </body>
 </html>
