--- a/andere_pflanzen.html
+++ b/andere_pflanzen.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
   <meta content="de" http-equiv="Content-Language">
   <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
   <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
-  body {background-color:#99cc33;}
-
-  td {vertical-align:center; overflow:hidden; }
+    body {
+      background-image: url("images/Nepeta-cubanica-bg.jpg");
+    }
   </style>
-  <title>andere interessante Gartenpflanzen</title>
+  <title>Andere interessante Gartenpflanzen</title>
 </head>
-<body background="images/Nepeta-cubanica-bg.jpg">
-  <div align="center" id="uebersicht">
-    <table>
-      <tbody>
-        <tr>
-          <td align="center" bgcolor="#007700" height="80" width="660"><font face=
-          "Arial"><font size="6">andere interessante Pflanzen</font></font></td>
-        </tr>
-      </tbody>
-    </table>
-    <p></p>
+<body>
+  <div class="backlink">
+    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a></p>
+  </div>
+  <div class="title">
+    <p>Andere interessante Pflanzen</p>
+  </div>
     <table>
       <tbody>
         <tr>
@@ -138,8 +136,10 @@
           </td>
         </tr>
       </tbody>
-    </table><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück
-    zur Fotoübersicht</a>
+    </table>
+  <div class="backlink">
+    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a></p>
   </div>
 </body>
 </html>
