--- a/Cyclamen.html
+++ b/Cyclamen.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
   <meta content="de" http-equiv="Content-Language">
   <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
   <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
-  body {background-color:#99cc33;}
-
-  td {vertical-align:center; overflow:hidden;}
+    body {
+      background-image: url("images/Cyclamen-bg.jpg");
+    }
   </style>
   <title>Christophs Fotos - Cyclamen</title>
 </head>
-<body background="images/Cyclamen-bg.jpg">
-  <div align="center" id="uebersicht">
-    <table>
-      <tbody>
-        <tr>
-          <td bgcolor="#007700" height="80" width="500">
-            <p align="center"><font face="Arial" size="6">Cyclamen</font></p>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <p></p>
+<body>
+  <div class="backlink">
+    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a></p>
+  </div>
+  <div class="title">
+    <p>Cyclamen</p>
+  </div>
     <table border="0" cellpadding="0" cellspacing="0">
       <tbody>
         <tr>
@@ -416,9 +413,9 @@
         </tr>
       </tbody>
     </table>
-    <p></p>
-    <p><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück zur
-    Fotoübersicht</a></p>
+  <div class="backlink">
+    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a></p>
   </div>
 </body>
 </html>
