--- a/Fruehjahr.html
+++ b/Fruehjahr.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
   <meta content="de" http-equiv="Content-Language">
   <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
   <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
-  body {background-color:#99cc33;}
-
-  td {vertical-align:center; overflow:hidden; }
+    body {
+      background-image: url("images/Hepatica-BG.jpg");
+    }
   </style>
   <title>Frühjahr</title>
 </head>
-<body background="images/Hepatica-BG.jpg">
-  <div align="center" id="uebersicht">
-    <table>
-      <tbody>
-        <tr>
-          <td align="center" bgcolor="#007700" height="80" width="660"><font face=
-          "Arial"><font size="6">Frühjahr</font></font></td>
-        </tr>
-      </tbody>
-    </table>
-    <p></p>
+<body>
+  <div class="backlink">
+    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a></p>
+  </div>
+  <div class="title">
+    <p>Frühjahr</p>
+  </div>
     <table>
       <tbody>
         <tr>
@@ -641,9 +639,9 @@
         </tr>
       </tbody>
     </table>
-    <p></p>
-    <p><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück zur
-    Fotoübersicht</a></p>
+  <div class="backlink">
+    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a></p>
   </div>
 </body>
 </html>
