--- a/Schattenpflanzen.html
+++ b/Schattenpflanzen.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
   <meta content="de" http-equiv="Content-Language">
   <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
   <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
@@ -9,36 +10,17 @@
     body {
       background-image: url("images/Kalmie-bg.jpg");
     }
-    table {
-      width: 70%;
-    }
-    td {
-      vertical-align:center;
-      overflow:hidden;
-    }
   </style>
   <title>Schattenpflanzen</title>
 </head>
 <body>
-  <div align="center" id="uebersicht">
-    <table>
-      <tbody>
-        <tr>
-          <td align="center" bgcolor="#007700" height="80" width="660"><font face=
-          "Arial"><font size="6">Schattenpflanzen</font></font></td>
-        </tr>
-      </tbody>
-    </table>
-    <p></p>
-    <table>
-      <tbody>
-        <tr>
-          <td bgcolor="#44AA00" height="30" width="500">
-            <p align="center"></p>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="backlink">
+    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a></p>
+  </div>
+  <div class="title">
+    <p>Schattenpflanzen</p>
+  </div>
     <table>
       <tbody>
         <tr>
@@ -289,9 +271,9 @@
         </tr>
       </tbody>
     </table>
-    <p></p>
-    <p><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück zur
-    Fotoübersicht</a></p>
+  <div class="backlink">
+    <p><a href="index.html">zurück zur Startseite</a></p>
+    <p><a href="Fotostartseiteneu.html">zurück zur Fotoübersicht</a></p>
   </div>
 </body>
 </html>
