--- a/Fruehjahr.html
+++ b/Fruehjahr.html
@@ -73,7 +73,7 @@
             in noch schönerem Gelb und ist offenbar auch hier einigermassen winterhart. Pflanzen
             aus Griechenland probiere ich gerade aus. Sie haben die Winter seit 2009 unter einer
             Glasscheibe gut überstanden. Manchmal verfärben sich die Pflanzen schön herbstlich. Der
-            Samen erwies sich nie als keimfähig.</font></p>
+            Samen erwies sich selten als keimfähig.</font></p>
           </td>
           <td bgcolor="#44AA00" height="170" valign="middle" width="300">
             <p align="left" style="margin-right: 10px;"><img align="right" height="327" src=
@@ -339,7 +339,7 @@
             <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">Dactylorhiza
             maculata, das heimische Knabenkraut, hat sich im eigenen Garten seit der Pflanzung im
             Jahre 1982 zu dieser mächtigen Pflanze mit bis zu 21 Blütenstängeln entwickelt. Das
-            Alter von mittlerweile über 30 Jahren ist ganz aussergewöhnlich.</font></p>
+            Alter von mittlerweile über 35 Jahren ist ganz aussergewöhnlich.</font></p>
           </td>
         </tr>
       </tbody>
