--- a/Sommer.html
+++ b/Sommer.html
@@ -80,10 +80,10 @@
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="300">
             <p align="right" style="margin-left: 10px;"><img align="left" height="185" src=
-            "images/Helianthemum-Ben-Affleck.JPG" width="200"> <img align="middle" height="185"
-            src="images/Helianthemum-Diana.JPG" width="200"> <img align="middle" height="185" src=
-            "images/Helianth-red-orient.jpg" width="200"> <img align="right" height="185" src=
-            "images/Helianth-Renate.jpg" width="198"></p>
+            "images/Helianthemum-Ben-Affleck.JPG" width="180"> <img align="middle" height="165"
+            src="images/Helianthemum-Diana.JPG" width="180"> <img align="middle" height="165" src=
+            "images/Helianth-red-orient.jpg" width="180"> <img align="right" height="165" src=
+            "images/Helianth-Renate.jpg" width="180"> img align="right" height="165"</p>
           </td>
         </tr>
       </tbody>
