--- a/Sommer.html
+++ b/Sommer.html
@@ -83,7 +83,7 @@
             "images/Helianthemum-Ben-Affleck.JPG" width="180"> <img align="middle" height="165"
             src="images/Helianthemum-Diana.JPG" width="180"> <img align="middle" height="165" src=
             "images/Helianth-red-orient.jpg" width="180"> <img align="right" height="165" src=
-            "images/Helianth-Renate.jpg" width="180"> img align="right" height="165"</p>
+            "images/Helianth-Renate.jpg" width="180"> < img align="right" height="165"></p>
           </td>
         </tr>
       </tbody>
