--- a/Campanulaceae.html
+++ b/Campanulaceae.html
@@ -76,11 +76,10 @@
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
-            <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Diese schöne
-            Glockenblume ist leider nur 2jährig, aber die etwas schwierige Aussaat lohnt sich.Ich
+            <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Symphyandra wanneri 
+            ist leider nur 2jährig, aber die etwas schwierige Aussaat lohnt sich. Ich
             fand sie zufällig in meinem Anzuchtbeet, wo ich Samen aus der Südtürkei ausgesät
-            hatte.Blüht im Mai ca. 40cm hoch und stirbt dann ab. Es könnte sich um eine Symphyandra
-            (wanneri?) handeln.</font></p>
+            hatte.Blüht im Mai ca. 40cm hoch und stirbt dann ab.</font></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="172">
             <p align="left" style="margin-right: 10px;"><font face="Arial" size="5"><img align=
