--- a/Cyclamen.html
+++ b/Cyclamen.html
@@ -98,7 +98,8 @@
           </td>
           <td bgcolor="#44AA00" height="200" width="230">
             <p align="left"><font face="Arial" size="3">Von Cyclamen hederifolium existieren eine
-            Fülle von Sonderformen wie diese mit besonders dunklen Blüten.</font></p>
+            Fülle von Sonderformen wie diese mit besonders dunklen Blüten. Auch die Blattzeichnung kann
+            sehr unterschiedlich sein bis hin zu rein silbrigen Tönungen.</font></p>
           </td>
         </tr>
       </tbody>
