--- a/Kalthauspflanzen.html
+++ b/Kalthauspflanzen.html
@@ -37,9 +37,9 @@
           "middle&gt; &lt;p align=" width="173"><img align="left" height="200" src=
           "images/Maurandya-scandens.JPG" width="250"></td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="327">
-            <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">Asarina
-            (Maurandya) scandens ist eine überreich blühende Kletterpflanze, die frostfrei
-            überwintert auch mehrjährig ist.Neuerdings heißt sie Maurandya scandens. An einer
+            <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">Maurandya 
+            scandens (früher Asarina scandens) ist eine überreich blühende Kletterpflanze, die frostfrei
+            überwintert auch mehrjährig ist. An einer
             entsprechenden Kletterhilfe bringt sie es im Laufe des Sommers auf über 2 Meter Höhe.
             Milde Winter hat sie sogar im Freien überlebt.</font></p>
           </td>
@@ -50,7 +50,7 @@
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
-            <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Asarina `Blue
+            <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Maurandya`Blue
             Sky´ist eine dankbare Kübelpflanze, die den ganzen Sommer über blüht. Unterschiede zur
             Art konnte ich beim besten Willen nicht feststellen. Die Farbe ist hier etwas zu wenig
             violett wiedergegeben.</font></p>
@@ -70,8 +70,8 @@
             "images/Lophospermum-erubescens.JPG" width="173"></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="250">
-            <p align="center"><font face="Arial" size="2">Asarina erubescens (neuerdings
-            Lophospermum erubescens genannt) ist eine 4m hohe auch mehrjährige Pflanze für das
+            <p align="center"><font face="Arial" size="2">Lophosporum erubescens ( früher Asarina 
+            erubescens genannt) ist eine 4m hohe auch mehrjährige Pflanze für das
             Kalthaus (im Sommer auch draußen im Kübel oder ausgepflanzt), die von Frühjahr bis
             Herbst ihre großen Blüten zeigt. Es gibt auch eine weiße Form. Ich ziehe eine Pflanze
             zusammen mit einer Kletterrose am Gerüst.</font></p>
