--- a/Sommer.html
+++ b/Sommer.html
@@ -80,10 +80,10 @@
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="300">
             <p align="right" style="margin-left: 10px;"><img align="left" height="185" src=
-            "images/Helianthemum-Ben-Affleck.JPG" width="180"> <img align="middle" height="165"
+            "images/Helianthemum-Ben-Affleck.JPG" width="180"> <img align="middle" height="160"
             src="images/Helianthemum-Diana.JPG" width="180"> <img align="middle" height="165" src=
             "images/Helianth-red-orient.jpg" width="180"> <img align="right" height="165" src=
-            "images/Helianth-Renate.jpg" width="180"> < img align="right" height="165"></p>
+            "images/Helianth-Renate.jpg" width="180"> <img align="right" height="165"></p>
           </td>
         </tr>
       </tbody>
@@ -432,8 +432,8 @@
             "images/Anomatheca-laxa.jpg" width="300"></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="375">
-            <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">Anomateca
-            laxa aus Südafrika ist eng mit Freesien verwandt. Es wird nur 15cm hoch, hier
+            <p align="center" style="margin-right: 10px;"><font face="Arial" size="3">Freesia 
+            laxa aus Südafrika wurde früher auch Anomatheca laxa genannt. Es wird nur 15cm hoch, hier
             abgebildet ist die Sorte `Joan Evans´. Es gibt auch rote, rein weiße und sogar
             bläuliche Formen. Blüte bis Ende September, Vermehrund aus Samen leicht, Überwinterung
             mit leichtem Schutz.</font></p>
