--- a/Tipsneu.html
+++ b/Tipsneu.html
@@ -21,7 +21,7 @@
     <p>Tipps, Tricks und Pflegeanleitungen</p>
   </div>
   <div class="text">
-    <h4>Canarina canarienis</h4>
+    <h3>Canarina canarienis</h3>
     <p> von den Kanaren; kommt dort auf
         Teneriffa, La Palma und Gomera in einer gelblich und orange bis dunkelrot blühenden
         Form vor. Da die Pflanzen autosteril sind und ich nur je 1 Pflanze hatte, habe ich eine
@@ -100,8 +100,8 @@
       soll aber auch gehen.
     </p>
     <p>
-    Cistus incanus
-            ssp. creticus (rosa) übersteht die meisten Winter ohne jeden Schutz. Die Grenze dürfte
+    <h3>Cistus incanus
+            ssp. creticus </h3> (rosa) übersteht die meisten Winter ohne jeden Schutz. Die Grenze dürfte
             so bei -12° liegen. Alte Pflanzen tun sich schwerer, daher immer wieder neu aussäen.
             Der Winter 2002/03 war mit Frost bis -9° zwar nicht allzu hart, aber die Frostperiode
             war sehr lang, fast ohne Schnee, und es folgten einige weitere schwächere Frostperioden
