--- a/Tipsneu.html
+++ b/Tipsneu.html
@@ -100,8 +100,10 @@
       soll aber auch gehen.
     </p>
     <p>
-    <h4>Cistus incanus
-            ssp. creticus </h4> (rosa) übersteht die meisten Winter ohne jeden Schutz. Die Grenze dürfte
+    <h4>
+    Cistus incanus ssp. creticus 
+    </h4> 
+            (rosa) übersteht die meisten Winter ohne jeden Schutz. Die Grenze dürfte
             so bei -12° liegen. Alte Pflanzen tun sich schwerer, daher immer wieder neu aussäen.
             Der Winter 2002/03 war mit Frost bis -9° zwar nicht allzu hart, aber die Frostperiode
             war sehr lang, fast ohne Schnee, und es folgten einige weitere schwächere Frostperioden
@@ -112,8 +114,10 @@
             lassen. Bilder finden Sie auf der Fotoseite Zistrosen.
     </p>
     <p>
-    Cistus
-            ladanifer habe ich aus den Bergen der Sierra de Gredos (Spanien) mitgebracht, nicht aus
+    <h4>
+    Cistus ladanifer
+    </h4> 
+            habe ich aus den Bergen der Sierra de Gredos (Spanien) mitgebracht, nicht aus
             der wärmeren Extremadura. Zu meiner Überrachung hat er im Januar 2002 mehrere Nächte
             -8° ohne Schaden überstanden und sich inzwischen zu einem großen Busch entwickelt. Auch
             weitere Pflanzen haben die folgenden 6 Winter ohne Schaden überlebt. Der Januar 2009
@@ -125,26 +129,32 @@
             handeln).
     </p>
     <p>
-    Cistus
-            laurifolius ist die härteste Art, die wohl auch im Osten Deutschlands völlig winterhart
+    <h4>
+    Cistus laurifolius
+    </h4> 
+            ist die härteste Art, die wohl auch im Osten Deutschlands völlig winterhart
             und auch sonst sehr robust ist. Auch im Februar 2012 kein Problem.
     </p>
     <p>
-    Cistus
-            monspeliensis verträgt kaum Frost. Kalthauspflanze. Ab dem Winter 2006/07 hat eine
+    <h4>Cistus
+            monspeliensis </h4> verträgt kaum Frost. Kalthauspflanze. Ab dem Winter 2006/07 hat eine
             vergessene Pflanze im Garten überlebt, sogar -14° im Januar 2009 brachte nicht alle
             Zweige zum Absterben.
     </p>
     <p>
-    Cistus
-            populifolius teste ich erst seit 2007. Die letzten Winter wurden im Frühbeetkasten gut
+    <h4>
+    Cistus populifolius
+    </h4>
+            teste ich erst seit 2007. Die letzten Winter wurden im Frühbeetkasten gut
             überstanden. Eine Überwinterung im Freien wurde im Winter 2007/08 ohne Schaden
             vertragen, im Januar 2009 aber ging es schief, 2012 ebenfalls, 2013 ging alles gut. Die
             weißen Blüten wirken sehr edel.
     </p>
     <p>
-    Cistus
-            salviifolius habe ich aus den Bergen der Toscana und aus den Picos de Europa in
+    <h4>
+    Cistus salviifolius
+    </h4>
+            habe ich aus den Bergen der Toscana und aus den Picos de Europa in
             Nordspanien. Bei nicht zu nasser Überwinterung ist ein Versuch im Garten durchaus
             angebracht, besonders bei nicht zu alten Pflanzen (s.o.). Temperaturen von -10° sind
             kein Problem, im Winter 2002/03 sah es allerdings schlecht aus (s. oben), die Winter
@@ -154,22 +164,28 @@
             kriecht.
     </p>
     <p>
+    <h4>
     Cistus albidus
+    </h4>
             sieht C. creticus sehr ähnlich, hat die letzten Winter auch gut aber mit leichten
             Schäden an den Triebspitzen vertragen, den Februar 2012 nur unter Fichtenreisig,
             2012/13 ohne jeden Schutz.
     </p>
     <p>
-    Cistus
-            psilosepalus hat relativ kleine weiße Blüten. Die Winterhärte schien zunächst
+    <h4>
+    Cistus psilosepalus
+    </h4>
+            hat relativ kleine weiße Blüten. Die Winterhärte schien zunächst
             ausreichend zu sein, im Januar 2009 und 2010 gab es viele Ausfälle in schwerem
             Lehmboden. Den Februar 2012 überstanden mehrere in ganz lockerem mit viel Split
             durchsetzten Boden überraschend ohne Schaden! 2012/13 ging alles sehr gut, die Blüte im
             folgenden Sommer war überaus üppig.
     </p>
     <p>
-    Cistus
-            symphytifolius von den Kanaren verträgt nur ganz wenig Frost. Die Überwinterung erfolgt
+    <h4>
+    Cistus  symphytifolius
+    </h4>
+            von den Kanaren verträgt nur ganz wenig Frost. Die Überwinterung erfolgt
             bei 5-20°, wichtiger als die Temperatur ist aber, daß er viel Schatten und
             Luftfeuchtigkeit braucht. Er kommt in der Natur als Unterwuchs in den Kiefernwäldern
             der Passatwolkenzone vor.Die großen rosaroten Blüten sind eindrucksvoll, die Pflege in
@@ -177,14 +193,16 @@
             Schön aber nicht empfehlenswert.
     </p>
     <p>
-    Cistus
-            osbeckiaefolius kommt nur sehr selten auf Teneriffa und La Gomera vor, die Blätter sind
+    <h4>
+    Cistus  osbeckiaefolius
+    </h4>
+            kommt nur sehr selten auf Teneriffa und La Gomera vor, die Blätter sind
             silbrig, die Blüten rot (dunkler als C. creticus). Die Pflege ist nicht einfach, da die
             Pflanzen frostfrei überwintern müssen und im Sommer etwas schattig und luftfeucht
             stehen sollen.
     </p>
     <p>
-    Wer sich für
+            Wer sich für
             Zistrosen interessiert, sollte beachten, daß zwar sehr viele Blüten gebildet werden,
             die Einzelblüte aber nur 1 Tag haltbar ist und die Blütezeit auf ca. 2 Wochen
             beschränkt ist.Besonders in England werden viele Hybriden gezogen, über deren
@@ -196,7 +214,7 @@
       Viscum album - die Mistel
     </h3>
     <p>
-    ist sicher keine
+            ist sicher keine
             typische Gartenpflanze. Man kann sie auch weder bei mir noch sonst irgendwo als lebende
             Pflanze kaufen, da sie ein Halbschmarotzer ist und auf Bäumen wächst. Halbschmarotzer
             heißt, die Pflanze entnimmt dem Wirt nur Wasser und Nährstoffe, assimiliert aber auch
