--- a/Tipsneu.html
+++ b/Tipsneu.html
@@ -85,7 +85,8 @@
       stammen aus dem Mittelmeerraum und den angrenzenden Gebieten z.B. den Kanaren. Daraus
       ergibt sich schon, daß es um die Winterhärte bei uns schlecht bestellt ist. Die meisten
       Arten vertragen aber wenigstens ein paar Minusgrade, weshalb sie auch im wintermilden
-      England häufig angepflanzt werden. Anläßlich eines Mittelmeerurlaubes entsteht häufig
+      England häufig angepflanzt werden. In lockerem, wasserdurchlässigem Boden ist die Winterhärte
+      besser als in schwerem Lehmboden. Anläßlich eines Mittelmeerurlaubes entsteht häufig
       der Wunsch, diese Pflanzen im eigenen Garten zu besitzen, was zumindest im Westen
       Deutschlands eingeschränkt möglich ist. Mein Garten befindet sich am Stadtrand von Bonn
       (140m), das Klima ist hier schon merklich rauher als im Rheintal (40m).
@@ -96,8 +97,9 @@
       C.ladanifer, C.laurifolius, C.monspeliensis, C. populifolius, C.salviifolius,
       psilosepalus, C.symphytifolius und C. osbeckiaefolius, die ich alle aus Samen vom
       Naturstandort gezogen habe, was nicht schwierig ist, da Samen in großer Menge gebildet
-      werden und die Anzucht leicht ist. Stecklingsvermehrung habe ich noch nicht versucht,
-      soll aber auch gehen.
+      werden und die Anzucht leicht ist. Stecklingsvermehrung habe ich nur selten angewendet, geht 
+      aber auch, wenn man nach der Blüte die halbharten Stecklinge zu 2/3 in Sand mit etwas Bimskies
+      setzt und mit einer aufgelegten Glasscheibe die Verdunstung reduziert. Der Topf wird schattig aufgestellt.
     </p>
     <p>
     <h4>
@@ -111,7 +113,7 @@
             den folgenden Wintern haben alle Pflanzen mit leichten Schäden überlebt, im Januar 2009
             gingen die Temperaturen bis -14° herunter, was schwere Schäden, aber keinen
             Totalausfall verursachte, aber der Februar 2012 hat alle Pflanzen im Freiland erfrieren
-            lassen. Bilder finden Sie auf der Fotoseite Zistrosen.
+            lassen. Seitdem gab es nur milde Winter ohne Probleme. Bilder finden Sie auf der Fotoseite Zistrosen.
     </p>
     <p>
     <h4>
@@ -125,8 +127,12 @@
             In den meisten Gegenden Deutschlands würde ich ihn eher als Kübelpflanze ziehen. Wegen
             der riesigen Blüten (weiß mit rotbraunen Flecken) lohnt sich der Aufwand. Inzwischen
             habe ich auch Pflanzen aus der Sierra Nevada, die reinweiss ohne roten Fleck blühen.
-            Sie sind hier ebenfalls hart (es könnte sich um eine Hybride mit C. laurifolius
+            Sie sind hier völlig hart (es könnte sich um eine Hybride mit C. laurifolius
             handeln).
+            2014 bekam ich Pflanzen, die sowohl in Belaubung als auch Blüten C. ladanifer glichen, aber
+            sich in Bielefeld seit Jahren als völlig frosthart erwiesen hatten. Ich ziehe sie seitdem 
+            erfolgreich ohne jeden Winterschutz. Nach meiner Auffassung handelt es sich um eine Hybride 
+            zwischen C. ladanifer und C. laurifolius.
     </p>
     <p>
     <h4>
@@ -136,10 +142,11 @@
             und auch sonst sehr robust ist. Auch im Februar 2012 kein Problem.
     </p>
     <p>
-    <h4>Cistus
-            monspeliensis </h4> verträgt kaum Frost. Kalthauspflanze. Ab dem Winter 2006/07 hat eine
+    <h4>Cistus monspeliensis
+    </h4>
+            verträgt kaum Frost. Kalthauspflanze. Ab dem Winter 2006/07 hat eine
             vergessene Pflanze im Garten überlebt, sogar -14° im Januar 2009 brachte nicht alle
-            Zweige zum Absterben.
+            Zweige zum Absterben. Auf Dauer aber war sie im Freiland nicht zu halten.
     </p>
     <p>
     <h4>
@@ -147,7 +154,7 @@
     </h4>
             teste ich erst seit 2007. Die letzten Winter wurden im Frühbeetkasten gut
             überstanden. Eine Überwinterung im Freien wurde im Winter 2007/08 ohne Schaden
-            vertragen, im Januar 2009 aber ging es schief, 2012 ebenfalls, 2013 ging alles gut. Die
+            vertragen, im Januar 2009 aber ging es schief, 2012 ebenfalls, seit 2013 ging alles gut. Die
             weißen Blüten wirken sehr edel.
     </p>
     <p>
@@ -159,7 +166,7 @@
             angebracht, besonders bei nicht zu alten Pflanzen (s.o.). Temperaturen von -10° sind
             kein Problem, im Winter 2002/03 sah es allerdings schlecht aus (s. oben), die Winter
             danach brachten keine Probleme, der Januar 2009 hat etlichen Pflanzen das Leben
-            gekostet, der Februar 2012 allen, 2012/13 haben alle ohne Schaden überlebt. Die Form
+            gekostet, der Februar 2012 allen, seit 2012/13 haben alle ohne Schaden überlebt. Die Form
             aus der Toscana wächst aufrecht, während die aus Nordspanien mehr am Boden
             kriecht.
     </p>
@@ -169,7 +176,7 @@
     </h4>
             sieht C. creticus sehr ähnlich, hat die letzten Winter auch gut aber mit leichten
             Schäden an den Triebspitzen vertragen, den Februar 2012 nur unter Fichtenreisig,
-            2012/13 ohne jeden Schutz.
+            seit 2012/13 ohne jeden Schutz.
     </p>
     <p>
     <h4>
@@ -178,8 +185,8 @@
             hat relativ kleine weiße Blüten. Die Winterhärte schien zunächst
             ausreichend zu sein, im Januar 2009 und 2010 gab es viele Ausfälle in schwerem
             Lehmboden. Den Februar 2012 überstanden mehrere in ganz lockerem mit viel Split
-            durchsetzten Boden überraschend ohne Schaden! 2012/13 ging alles sehr gut, die Blüte im
-            folgenden Sommer war überaus üppig.
+            durchsetzten Boden überraschend ohne Schaden! Seit 2012/13 ging alles sehr gut, die
+            Blüte ist  überaus üppig.
     </p>
     <p>
     <h4>
