--- a/Zistrosen.html
+++ b/Zistrosen.html
@@ -45,7 +45,7 @@
               monspeliensis hat sehr viele kleine Blüten; nicht sicher winterhart. Die Samen für
               meine Pflanzen stammen von den Kanaren, aber auch Pflanzen aus dem Mittelmeerraum
               kommen hier oft nicht durch den Winter. Die Winter 2006-2008 ging alles gut, 2009
-              starb viel ab.</font></p>
+              starb viel, 2012 alles ab.</font></p>
             </td>
             <td bgcolor="#44AA00" height="200" valign="middle" width="145">
               <p align="left" style="margin-right: 10px;"><img align="right" height="205" src=
@@ -66,8 +66,11 @@
               ladanifer aus Spanien hat die prächtigsten Blüten aller Zistrosen.Es wurde oft in
               Hybriden eingekreuzt. Obwohl 5 Winter ohne Schutz gut vertragen wurden, stelle ich
               immer zur Sicherheit auch eine Pflanze in das Kalthaus. Im Januar 2009 gab es draußen
-              schwere Schäden. Samen setzen die Pflanzen bei mir im Gegensatz zur Natur nur ganz
-              selten an.</font></p>
+              schwere Schäden, 2012 starben alle ab. Samen setzen die Pflanzen bei mir im Gegensatz 
+              zur Natur nur ganz selten an. Seit 2014 ziehe ich Pflanzen, die genau wie C. ladanifer aussehen,
+              ber wohl Hybriden zwischen C. ladanifer und C. laurifolius sind. Sie scheinen völlig 
+              hart zu sein.
+              </font></p>
             </td>
           </tr>
         </tbody>
@@ -79,7 +82,7 @@
               <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Cistus
               salviifolius habe ich als aufrecht wachsenden Busch aus den Bergen der Toscana. Die
               meisten Pflanzen haben in den letzten 12 Jahren überlebt und blühen sehr reich, der
-              Januar 2009 ließ aber viele Pflanzen absterben.</font></p>
+              Januar 2009  und 2012 ließ aber viele Pflanzen absterben.</font></p>
             </td>
             <td bgcolor="#44AA00" height="200" valign="middle" width="169">
               <p align="left" style="margin-right: 10px;"><img align="right" height="195" src=
