--- a/Zistrosen.html
+++ b/Zistrosen.html
@@ -68,7 +68,7 @@
               immer zur Sicherheit auch eine Pflanze in das Kalthaus. Im Januar 2009 gab es draußen
               schwere Schäden, 2012 starben alle ab. Samen setzen die Pflanzen bei mir im Gegensatz 
               zur Natur nur ganz selten an. Seit 2014 ziehe ich Pflanzen, die genau wie C. ladanifer aussehen,
-              ber wohl Hybriden zwischen C. ladanifer und C. laurifolius sind. Sie scheinen völlig 
+              aber wohl Hybriden zwischen C. ladanifer und C. laurifolius sind. Sie scheinen völlig 
               hart zu sein.
               </font></p>
             </td>
