--- a/Schattenpflanzen.html
+++ b/Schattenpflanzen.html
@@ -231,12 +231,14 @@
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
             <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Ranunculus
-            ficaria ist ein gefürchtetes Unkraut, einige Züchtungen wie dieses `Ken Aslet´ wachsen
+            ficaria ist ein gefürchtetes Unkraut, einige Züchtungen wie dieses `Ken Aslet´ (links) wachsen
             aber sehr moderat.</font></p>
           </td>
           <td bgcolor="#44AA00" height="143" valign="middle" width="240">
             <p align="left" style="margin-right: 10px;"><img align="right" height="318" src=
-            "images/Ranunculus.jpg" width="300"></p>
+            "images/Ranunculus.jpg" width="300">
+            <img align="left" height="318" src="images/Ranunculus Brazen Hussy.jpg" width="300">
+            </p>
           </td>
         </tr>
       </tbody>
