--- a/Schattenpflanzen.html
+++ b/Schattenpflanzen.html
@@ -226,6 +226,26 @@
         </tr>
       </tbody>
     </table>
+    
+     <table>
+      <tbody>
+        <tr>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="200">
+            <p align="right" style="margin-left: 10px;"><img align="left" height="197" src=
+            "images/Ranunculus.jpg " width="230"></p>
+          </td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="250">
+            <p align="center"><font face="Arial" size="2">Ranunculus ficaria ist ein gefürchtetes Unkraut. 
+            Einige Züchtungen wie dieses R. `Ken Aslet` (links) oder ´Brazen Hussy` wachsen aber sehr moderat.
+            </font></p>
+          </td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="149">
+            <p align="left" style="margin-right: 10px;"><img align="right" height="197" src=
+            "images/Ranunculus Brazen Hussy.jpg" width="200"></p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
     <table>
       <tbody>
         <tr>
