--- a/Schattenpflanzen.html
+++ b/Schattenpflanzen.html
@@ -237,6 +237,7 @@
           <td bgcolor="#44AA00" height="200" valign="middle" width="250">
             <p align="center"><font face="Arial" size="2">Ranunculus ficaria ist ein gefürchtetes Unkraut. 
             Einige Züchtungen wie dieses R. `Ken Aslet` (links) oder ´Brazen Hussy` wachsen aber sehr moderat.
+            `Brazen Hussy`zeivhnet sich insbesondere durch die tiefbraunen Blätter aus.
             </font></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="149">
@@ -246,22 +247,25 @@
         </tr>
       </tbody>
     </table>
-    <table>
+     <table>
       <tbody>
         <tr>
-          <td bgcolor="#44AA00" height="200" valign="middle" width="316">
-            <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Ranunculus
-            ficaria ist ein gefürchtetes Unkraut, einige Züchtungen wie dieses `Ken Aslet´ (links) wachsen
-            aber sehr moderat.</font></p>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="200">
+            <p align="right" style="margin-left: 10px;"><img align="left" height="197" src=
+            "images/Ranunculus Vanessa6.jpg " width="230"></p>
           </td>
-          <td bgcolor="#44AA00" height="143" valign="middle" width="240">
-            <p align="left" style="margin-right: 10px;"><img align="right" height="318" src=
-            "images/Ranunculus.jpg" width="300">
-            <img align="left" height="318" src="images/Ranunculus Brazen Hussy.jpg" width="300">
-            </p>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="250">
+            <p align="center"><font face="Arial" size="2">In den letzten Jahren entstanden immer mehr neue
+              Hybriden, teilweise auch mit orangen oder weissen Blüten. Links `Vanessa´, rechts ´Nariane`.
+          </font></p>
+          </td>
+          <td bgcolor="#44AA00" height="200" valign="middle" width="149">
+            <p align="left" style="margin-right: 10px;"><img align="right" height="197" src=
+            "images/Ranunculus Nariane.jpg" width="200"></p>
           </td>
         </tr>
       </tbody>
+    </table>
     </table>
     <table>
       <tbody>
