--- a/linksammlung.html
+++ b/linksammlung.html
@@ -18,6 +18,7 @@
 <h3>Hier gibt es Links zu allen möglichen Themen rund um den Garten</h3>
 <p><a href="http://www.gds-staudenfreunde.de/">www.gds-staudenfreunde.de</a>&nbsp;&nbsp;Gesellschaft der Staudenfreunde</p>
 <p><a href="https://www.jardinalpindulautaret.fr/">www.jardinalpindulautaret.fr</a>&nbsp;&nbsp;botanischer Garten der Universität Grenoble</p>
+<p><a href="https://www.uibk.ac.at/botany/botanical_gardens/index.html.de/">www.uibk.ac.at/botany/botanical_gardens/index.html.de</a>&nbsp;&nbsp;botanischer Garten Innsbruck</p>
 <p><a href="http://www.semperhorst.de/">www.semperhorst.de</a>&nbsp;&nbsp;Pflanzenliebhaber; alles über Sempervivum</p>
 <p><a href="http://www.gartentechnik.de/">www.gartentechnik.de</a>&nbsp;&nbsp;Linksammlung, Branchenbuch, Organisationen usw.</p>
 <p><a href="http://www.martinhaberer.de/">www.martinhaberer.de</a>&nbsp;&nbsp;Pflanzenliebhaber, Sempervivum</p>
@@ -25,7 +26,7 @@
 <p><a href="http://www.orchidee.de/">www.orchidee.de</a>&nbsp;&nbsp;Deutsche Orchideengesellschaft</p>
 <p><a href="http://www.biologie.uni-ulm.de/systax/infgard/gardens/germany.html">www.biologie.uni-ulm.de</a>&nbsp;&nbsp;Informationsystem Botanischer Gärten</p>
 <p><a href="http://www.bot-garden.uibk.ac.at/">bot-garden.uibk.ac.at</a>&nbsp;&nbsp;Alpine Gärten Innsbruck</p>
-<p><a href="https://www.kaktussnake.de/"www.kaktussnake.de</a>&nbsp;&nbsp;Sammlung und Verkauf winterharter Kakteen und Sukkulenten</p>
+<p><a href="https://www.kaktussnake.de/">www.kaktussnake.de</a>&nbsp;&nbsp;Sammlung und Verkauf winterharter Kakteen und Sukkulenten</p>
 <p><a href="http://www.greenseek.de/">www.greenseek.de</a>&nbsp;&nbsp;grüne Suchmaschine</p>
 <p><a href="http://www.juergens-gartenwelt.de/">www.juergens-gartenwelt.de</a>&nbsp;&nbsp;Steingartenfan mit vielen Fotos</p>
 <p><a href="http://www.botanikus.de/">www.botanikus.de</a>&nbsp;&nbsp;Datenbank, Giftpflanzen, Heilpflanzen, Literatur</p> 
