--- a/Tipsneu.html
+++ b/Tipsneu.html
@@ -277,7 +277,7 @@
             Standort.
         </td>
         <td>
-          <img align="right" height="320" src="images/CLEMATISA.JPG">
+          <img align="right" height="320" src="images/Clematisa.JPG">
         </td>
       </tr>
     </table>
